# static-analyzer

./: Makefile  analyzer.ml  dune  rapport.md  test.sh
domains/: domain.ml  value_domain.ml
examples/: ex2.c  ex3.c  ex4.c  ex5.c  ex_bug.c
frontend/: abstract_syntax_tree.ml  cfg.ml  cfg_printer.ml  dune  errors.ml  file_parser.ml  lexer.mll  options.ml  parser.mly  tree_to_cfg.ml
iterator/: dune  iterator.ml
libs/: dune
