(library
  (name frontend)
  (wrapped false)
  (libraries libs zarith menhirLib apron))

; Special target to generate messages for parser
(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(menhir
  (flags --explain --table)
  (modules parser))

(ocamllex
  (modules lexer))
